# SkillRadar

./: .gitignore  AGENTS.md  Makefile  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260426_000001_create_persistence_schema.py  20260426_000002_seed_default_user_profile.py
backend/src/skillradar_api/: __init__.py  config.py  main.py
backend/src/skillradar_api/agents/: __init__.py  factory.py  mock.py  protocols.py  types.py
backend/src/skillradar_api/api/: schemas.py
backend/src/skillradar_api/api/routes/: lessons.py
backend/src/skillradar_api/db/: __init__.py  enums.py  models.py  repositories.py  session.py
backend/src/skillradar_api/generation/: __init__.py  orchestrator.py  service.py
backend/src/skillradar_api/lessons/: __init__.py  service.py
backend/src/skillradar_api/profile/: __init__.py  seed_data.py  seed_profile.py  service.py
backend/src/skillradar_api/retrieval/: __init__.py  factory.py  mock.py  pipeline.py  protocols.py  quality.py  types.py
backend/tests/: conftest.py  test_agents.py  test_generation_orchestration.py  test_generation_requests.py  test_health.py  test_lesson_library.py  test_migrations.py  test_mvp_smoke.py  test_persistence.py  test_profile_seed.py  test_retrieval.py
docs/: implementation-backlog.md  requirements.md  solution.md
frontend/: eslint.config.mjs  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: app-shell.tsx  lesson-content.tsx  (+1 more)
(+3 files in other folders)
